# ChangeLog for media-libs/xvid
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/xvid/ChangeLog,v 1.17 2004/01/29 04:17:36 agriffis Exp $

  28 Jan 2004; Aron Griffis <agriffis@gentoo.org> xvid-0.9.1.ebuild,
  xvid-0.9.2-r1.ebuild, xvid-1.0.0_beta3.ebuild:
  ia64 keywords changes

  13 Jan 2004; Aron Griffis <agriffis@gentoo.org> xvid-0.9.1.ebuild:
  stable on alpha

*xvid-1.0.0_beta3 (03 Jan 2004)

  03 Jan 2004; Martin Holzer <mholzer@gentoo.org> xvid-1.0.0_beta3.ebuild:
  Version bumped. Closes 36984

  26 Sep 2003; Jason Wever <weeve@gentoo.org> xvid-0.9.1.ebuild:
  Added sparc keyword.

*xvid-0.9.2-r1 (11 Aug 2003)

  11 Aug 2003; Martin Holzer <mholzer@gentoo.org> xvid-0.9.2-r1.ebuild,
  xvid-0.9.2.ebuild:
  Adding compatible symblink.

*xvid-0.9.2 (10 Aug 2003)

  10 Aug 2003; Martin Holzer <mholzer@gentoo.org> xvid-0.9.2.ebuild:
  Version bumped.

  13 Mar 2003; Olivier Reisch <doctomoe@gentoo.org> xvid-0.9.1.ebuild :
  Marked ppc stable

*xvid-0.9.1 (16 Feb 2003)

  15 Apr 2003; Arcady Genkin <agenkin@gentoo.org> :
  Marking stable on x86.

  16 Feb 2003; Martin Schlemmer <azarah@gentoo.org> xvid-0.9.1.ebuild :
  New version.  Should also work on ppc and alpha!

*xvid-0.9.0 (02 Dec 2002)

  07 Feb 2003; Nick Hadaway <raker@gentoo.org> xvid-0.9.0.ebuild :
  Marked stable for x86.

  02 Feb 2003; Mark Guertin <gerk@gentoo.org> xvid-0.9.0.ebuild :
  Fixed SRC_URI

  19 Dec 2002; Rajiv Manglani <rajiv@gentoo.org> xvid-0.9.0.ebuild :
  fixed ppc src_compile(). now builds properly on ppc. see bug #12257.

  13 Dec 2002; Martin Schlemmer <azarah@gentoo.org> xvid-0.9.0.ebuild :
  Fix to install with divx4linux installed.

  02 Dec 2002; Martin Schlemmer <azarah@gentoo.org> :
  Initial release, thanks to good work by Jacob Perkins <jap1@ionet.net>.
  Fixed the DEPEND .. we cannot depend on nasm for other archs than x86.