@@ -1,9 +1,9 @@
-MD5 ed2e956479373c8f0c2305b7848af431 ChangeLog 2033
+MD5 d0b57aeaf6fc8e12ca7953b8e92df27c ChangeLog 2138
 MD5 1936e5913ca33961d610de0f4ab1a1c3 xvid-0.9.0.ebuild 1653
 MD5 62229b6fa311c3d36a9780f92a8d6d74 xvid-0.9.1.ebuild 1178
 MD5 739d8ea35334f17bd733d3c76355193f xvid-0.9.2-r1.ebuild 1206
+MD5 adc4a5018403fb5f87e9be33d661caaf xvid-1.0.0_beta3.ebuild 1165
 MD5 9ef4af14dad87b03fde8e43f19e08d26 metadata.xml 225
-MD5 f6c8e66450ef2bcfde75c6c1f90cc2b6 xvid-1.0.0_beta3.ebuild 1166
 MD5 89f29accce7604fc71aa0793abc719f4 files/digest-xvid-0.9.0 67
 MD5 e83498fda540ee61cdb0ce3fe79585c8 files/digest-xvid-0.9.1 67
 MD5 3943af38157fef55f9da6987560d2e77 files/digest-xvid-0.9.2-r1 67
