@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/xvid/xvid-1.0.0_beta3.ebuild,v 1.2 2004/01/29 04:17:36 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/xvid/xvid-1.0.0_beta3.ebuild,v 1.3 2004/02/18 16:40:49 mholzer Exp $
 
 MY_P=${PN}core-${PV/_beta/-beta}
 S="${WORKDIR}/${MY_P}/build/generic"
@@ -11,7 +11,7 @@ HOMEPAGE="http://www.xvid.org/"
 DEPEND="virtual/glibc
 	x86? ( >=dev-lang/nasm-0.98.36 )"
 
-SLOT="0"
+SLOT="1"
 LICENSE="GPL-2"
 KEYWORDS="~x86 ~ppc ~sparc ~alpha ~hppa ~amd64 ~ia64"
 
