@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/xvid
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/xvid/ChangeLog,v 1.17 2004/01/29 04:17:36 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/xvid/ChangeLog,v 1.18 2004/02/18 16:40:40 mholzer Exp $
+
+  18 Feb 2004; Martin Holzer <mholzer@gentoo.org> xvid-1.0.0_beta3.ebuild:
+  changing slot. Closes 41157
 
   28 Jan 2004; Aron Griffis <agriffis@gentoo.org> xvid-0.9.1.ebuild,
   xvid-0.9.2-r1.ebuild, xvid-1.0.0_beta3.ebuild:
